--- a/src/App.css
+++ b/src/App.css
@@ -3,37 +3,41 @@
   color: #222;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 20px auto;
+  text-align: left;
+  width: 40%;
+  border: 2px solid black;
+  padding-left: 20px;
+}
+p {
+  font-weight: 500;
+}
+.main h2 {
+  margin: 0;
+  padding: 0;
+}
+.main p {
+  margin-top: 0;
+}
+.tempLoc p {
+  margin: 4px auto;
+}
+.tempLoc :last-child {
+  margin-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.submitBtn {
+  padding: 10px 20px;
+  color: #fff;
+  border: none;
+  background-color: #333;
+  margin-left: 20px;
+  font-size: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputCity {
+  padding: 10px;
 }
