--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,21 @@
   border: 2px solid black;
   padding-left: 20px;
 }
+.entrance {
+  display: flex;
+  justify-content: space-between;
+}
+.deleteBtn {
+  margin-right: 40px;
+  align-self: center;
+  border-radius: 50%;
+  padding: 5px 8px;
+  color: #333;
+  border: 3px solid #333;
+  background-color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+}
 p {
   font-weight: 500;
 }
